docs: README completo com guia de multiplayer em rede